refactor: 코드 간결화
기존 collect 대신 toList 적용